--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=backend
+
+spring.data.mongodb.uri=mongodb://localhost:27017/recipehub
+spring.data.mongodb.database=recipehub
+server.port=8080
