add register + tailwind

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=backend
 spring.data.mongodb.uri=mongodb://localhost:27017/recipehub
 spring.data.mongodb.database=recipehub
 server.port=8080
+
+jwt.secret=zOfPDnywQBFbPBxssBi6Pz4XoJPIfcrp5br+6eK3sQk=
