--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "18.0.0",
+    "@angular/cdk": "^19.2.6",
     "@angular/common": "^19.2.1",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@spartan-ng/brain": "0.0.1-alpha.424",
     "@tailwindcss/postcss": "^4.0.14",
     "class-variance-authority": "^0.7.0",
